--- a/src/views/Main.module.css
+++ b/src/views/Main.module.css
@@ -1,10 +1,3 @@
-.main {
-  display: flex;
-  min-height: 100vh;
-}
-
-.layout {
-  height: auto;
-  flex-grow: 1;
-  background-color: #efefef;
+.content {
+    padding-top: 20px;
 }
