adaptation layout, adding endpoints to the store

--- a/src/component/user/User.module.css
+++ b/src/component/user/User.module.css
@@ -9,3 +9,14 @@
   margin-bottom: 0;
   margin-left: 15px;
 }
+
+.wrap {
+  text-align: center;
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .wrap {
+    display: none;
+  }
+}
