--- a/src/views/Main.module.css
+++ b/src/views/Main.module.css
@@ -1,10 +1,19 @@
 .main {
   display: flex;
-  min-height: 100vh;
+  flex-direction: row;
 }
 
 .layout {
-  height: auto;
-  flex-grow: 1;
+  margin-top: 60px;
+  height: calc(100vh - 60px);
+  width: 100%;
+  /*display: block;*/
+  /*flex: 0 1;*/
+  /*height: auto;
+  flex-grow: 1;*/
+  /*height: 100%;*/
+  /*width: calc(100% - 200px);
+  margin-left: 200px;*/
+  /*width: 100%;*/
   background-color: #efefef;
 }
