--- a/src/containers/bar/Bar.module.css
+++ b/src/containers/bar/Bar.module.css
@@ -1,9 +1,29 @@
 .root {
+  position: absolute;
+  width: 100%;
+  height: 60px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 10px 0px 100px;
 
-  padding-top: 10px;
-  padding-bottom: 10px;
   box-shadow: 0px 4px 8px 0px #bec3d1;
+}
+
+.menuButton {
+  color: #2e303d;
+  position: absolute;
+  left: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .package {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .root {
+    padding: 0px 10px 0px 70px;
+  }
 }
