--- a/src/containers/finance/Finance.module.css
+++ b/src/containers/finance/Finance.module.css
@@ -1,5 +1,9 @@
 .root {
-  padding: 20px;
+  padding: 20px 0px;
+}
+
+.container {
+  padding: 0px 15px;
 }
 
 .payCards {
@@ -7,8 +11,34 @@
   justify-content: space-around;
   margin-bottom: 50px;
 }
+
 .payCards > * {
-  width: 300px;
-  height: 300px;
-  border: 1px solid teal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.styledFormControl {
+  margin-top: 10px;
+}
+
+.dialogContent {
+  min-width: 600px;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .dialogContent {
+    min-width: 400px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dialogContent {
+    min-width: 300px;
+  }
 }
