--- a/src/containers/sidebar/Sidebar.module.css
+++ b/src/containers/sidebar/Sidebar.module.css
@@ -1,11 +1,14 @@
 .root {
-  position: relative;
+  position: fixed;
   min-width: 200px;
   background-color: #2e303d;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
 }
 
 .sidebar {
-  position: fixed;
   width: 200px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -14,10 +17,20 @@
 }
 
 .img {
-  width: 100%;
+  height: 177.5px;
+  width: 170px;
   margin-bottom: 20px;
 }
 
 .icon {
   margin-right: 10px;
+}
+
+.closeIcon {
+  color: rgb(221, 221, 221);;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+  font-size: 29px;
 }
