--- a/src/containers/bar/Bar.module.css
+++ b/src/containers/bar/Bar.module.css
@@ -3,11 +3,22 @@
   width: 100%;
   height: 60px;
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   align-items: center;
-  padding: 0px 10px 0px 100px;
-
+  padding: 0px 0px 0px 100px;
   box-shadow: 0px 4px 8px 0px #bec3d1;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.barItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*padding: 0px 70px;*/
+  height: 100%;
+  width: 25%;
+  border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .menuButton {
@@ -15,6 +26,39 @@
   position: absolute;
   left: 0;
 }
+
+/*.elevation {
+  width: 32%;
+}*/
+
+.userActions {
+  width: 18%;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
+
+.balance {
+  width: 32%;
+}
+/*.package {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 40px;
+  height: 100%;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.elevation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 40px;
+  height: 100%;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+}*/
 
 @media screen and (max-width: 600px) {
   .package {
