--- a/src/views/Main.module.css
+++ b/src/views/Main.module.css
@@ -5,15 +5,7 @@
 
 .layout {
   margin-top: 60px;
-  height: calc(100vh - 60px);
-  width: 100%;
-  /*display: block;*/
-  /*flex: 0 1;*/
-  /*height: auto;
-  flex-grow: 1;*/
-  /*height: 100%;*/
-  /*width: calc(100% - 200px);
-  margin-left: 200px;*/
-  /*width: 100%;*/
-  background-color: #efefef;
+  min-height: calc(100vh - 60px);
+  height: 100%;
+  width: 100vw;
 }
