--- a/src/containers/finance/Finance.module.css
+++ b/src/containers/finance/Finance.module.css
@@ -10,12 +10,15 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 50px;
+  align-items: flex-start;
 }
 
 .payCards > * {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
+  width: 30%;
 }
 
 .styledFormControl {
@@ -31,9 +34,55 @@
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
-  .dialogContent {
-    min-width: 400px;
+.cardInfo {
+  width: 100%;
+  border: 1px solid #ec860d;
+  background: rgba(236, 134, 13, .05);
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  align-items: center;
+  border-radius: 10px;
+  padding: 0px 10px;
+  margin-bottom: 20px;
+}
+
+.cardInfoText {
+  font-size: 12px;
+  max-width: 80%;
+}
+
+.payeerImg {
+  background-image: url('../../images/payeer.png');
+  width: 80%;
+  min-height: 40px;
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 969px) {
+  .payCards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .payCards > *{
+    margin-top: 30px;
+    position: relative;
+    width: 100%;
+    max-width: 450px;
+  }
+
+  .payCard::after {
+    position: absolute;
+    content: '';
+    width: calc((100vw - 30px));
+    right: -calc((100vw - 30px) / 2);;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1);
+    bottom: -15px;
   }
 }
 
@@ -41,4 +90,17 @@
   .dialogContent {
     min-width: 300px;
   }
+
+  .payCards > *{
+    margin-top: 30px;
+    position: relative;
+  }
 }
+
+
+@media screen and (max-width: 500px) {
+  .payCards > *{
+    max-width: 300px;
+  }
+}
+
