--- a/src/component/balance/Balance.module.css
+++ b/src/component/balance/Balance.module.css
@@ -5,12 +5,20 @@
 }
 
 .number {
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   margin: 0;
+  font-size: 20px;
 }
 
 .icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   margin-right: 10px;
+  font-size: 40px;
+  color: #ec860d;
 }
