--- a/src/containers/bar/Bar.module.css
+++ b/src/containers/bar/Bar.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   height: 60px;
   display: flex;
-  /*justify-content: space-between;*/
   align-items: center;
   padding: 0px 0px 0px 100px;
   box-shadow: 0px 4px 8px 0px #bec3d1;
@@ -15,7 +14,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /*padding: 0px 70px;*/
   height: 100%;
   width: 24%;
   border-left: 1px solid rgba(0, 0, 0, 0.15);
@@ -27,10 +25,6 @@
   left: 0;
 }
 
-/*.elevation {
-  width: 32%;
-}*/
-
 .userActions {
   width: 22%;
   justify-content: flex-end;
@@ -40,25 +34,45 @@
 .balance {
   width: 30%;
 }
-/*.package {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 40px;
-  height: 100%;
-  border-left: 1px solid rgba(0, 0, 0, 0.12);
-  border-right: 1px solid rgba(0, 0, 0, 0.12);
-}
 
 .elevation {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.iconHolder {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 3px solid #bec3d1;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 40px;
-  height: 100%;
-  border-left: 1px solid rgba(0, 0, 0, 0.12);
-  border-right: 1px solid rgba(0, 0, 0, 0.12);
-}*/
+  color: #bec3d1;
+  font-size: 40px;
+  margin: 0px 5px;
+}
+
+.centerItem {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background: #bec3d1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: #fff;
+}
+
+.elevationItem {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media screen and (max-width: 600px) {
   .package {
