--- a/src/containers/store/Store.Module.css
+++ b/src/containers/store/Store.Module.css
@@ -58,6 +58,15 @@
   align-items: center;
 }
 
+.cardTitleHolder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .cardSubtitle {
   position: absolute;
   bottom: -15px;
@@ -168,7 +177,7 @@
 }
 
 @media screen and (max-width: 1300px) {
-  .root {
+  /*.root {
     height: unset;
     min-height: 100%;
   }
@@ -176,7 +185,7 @@
   .paper {
     height: unset;
     min-height: 100%;
-  }
+  }*/
 
   .cardsHolder {
     flex-wrap: wrap;
