--- a/src/component/balance/Balance.module.css
+++ b/src/component/balance/Balance.module.css
@@ -10,7 +10,8 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .icon {
