--- a/src/containers/finance/Finance.module.css
+++ b/src/containers/finance/Finance.module.css
@@ -4,6 +4,15 @@
 
 .container {
   padding: 0px 15px;
+  position: relative;
+}
+
+.rightInfo {
+  position: absolute;
+  right: 15px;
+  top: 0;
+  margin-top: 0px;
+
 }
 
 .payCards {
@@ -40,15 +49,15 @@
   background: rgba(236, 134, 13, .05);
   display: flex;
   justify-content: space-between;
-  height: 60px;
+  min-height: 60px;
   align-items: center;
   border-radius: 10px;
-  padding: 0px 10px;
+  padding: 5px 10px;
   margin-bottom: 20px;
 }
 
 .cardInfoText {
-  font-size: 12px;
+  font-size: 16px;
   max-width: 80%;
 }
 
