--- a/src/containers/finance/Finance.module.css
+++ b/src/containers/finance/Finance.module.css
@@ -1,12 +1,13 @@
 .root {
-  padding: 20px 0px;
-  max-width: 100vw;
-  overflow: hidden;
+  padding: 20px 15px;
+  /*max-width: 100vw;
+  overflow: hidden;*/
 }
 
 .container {
-  padding: 0px 15px;
   position: relative;
+  /*max-width: 100vw;
+  overflow: hidden;*/
 }
 
 .rightInfo {
